[gd_scene load_steps=39 format=3 uid="uid://bkf2ibyck1b3x"]

[ext_resource type="Texture2D" uid="uid://bw7h7js0vgoue" path="res://Enemies/slime.png" id="1_iedml"]
[ext_resource type="Script" path="res://Enemies/slime.gd" id="1_n5hxi"]
[ext_resource type="PackedScene" uid="uid://q01xey42ybm8" path="res://Overlap/hurtbox.tscn" id="2_4tp5w"]
[ext_resource type="Script" path="res://Enemies/slime_stats.gd" id="4_st58p"]
[ext_resource type="PackedScene" uid="uid://t85arxmpo8tc" path="res://Enemies/player_detection.tscn" id="5_2636j"]
[ext_resource type="PackedScene" uid="uid://dmwrxn6mcj71c" path="res://Overlap/hitbox.tscn" id="6_3aumw"]

[sub_resource type="Animation" id="Animation_88xem"]
resource_name = "Idle_Left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xw74d"]
resource_name = "Idle_Right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ofal7"]
resource_name = "Move_Left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kqrn5"]
resource_name = "Move_Right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xfygn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0g1d1"]
resource_name = "Slime_Hit_Left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_qlm87"]
resource_name = "Slime_Hit_Right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m2yvr"]
_data = {
"Idle_Left": SubResource("Animation_88xem"),
"Idle_Right": SubResource("Animation_xw74d"),
"Move_Left": SubResource("Animation_ofal7"),
"Move_Right": SubResource("Animation_kqrn5"),
"RESET": SubResource("Animation_xfygn"),
"Slime_Hit_Left": SubResource("Animation_0g1d1"),
"Slime_Hit_Right": SubResource("Animation_qlm87")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3hf07"]
animation = &"Slime_Hit_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pfaaj"]
animation = &"Slime_Hit_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e8aig"]
animation = &"Slime_Hit_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_75lll"]
animation = &"Slime_Hit_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_32q17"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3hf07")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_pfaaj")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_e8aig")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_75lll")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dwkgw"]
animation = &"Idle_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_waa52"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dg65j"]
animation = &"Idle_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jun2p"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xyywq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_dwkgw")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_waa52")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_dg65j")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_jun2p")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k425f"]
animation = &"Move_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_22jmj"]
animation = &"Move_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0ucnv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_k425f")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_22jmj")
blend_point_1/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g8hml"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wcgxw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d03lu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0mw3i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kcso"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6icfw"]
states/Hit/node = SubResource("AnimationNodeBlendSpace2D_32q17")
states/Hit/position = Vector2(536.603, 194.635)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_xyywq")
states/Idle/position = Vector2(536.593, 100.023)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_0ucnv")
states/Move/position = Vector2(687.995, 99.2172)
states/Start/position = Vector2(392.5, 99.6086)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_g8hml"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_wcgxw"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_d03lu"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_0mw3i"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_0kcso")]
graph_offset = Vector2(60.4124, 13.29)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_0cbtb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xt5mv"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_es5da"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8wp76"]
radius = 56.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_bvtts"]
radius = 4.12311

[node name="Slime" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_n5hxi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_iedml")
hframes = 7
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m2yvr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6icfw")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_0cbtb")
parameters/Hit/blend_position = Vector2(2.08165e-12, 2.08165e-12)
parameters/Idle/blend_position = Vector2(0.565999, -0.0239651)
parameters/Move/blend_position = Vector2(0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_xt5mv")

[node name="Hurtbox" parent="." instance=ExtResource("2_4tp5w")]
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_es5da")

[node name="stats" type="Node" parent="."]
script = ExtResource("4_st58p")
max_health = 2

[node name="PlayerDetection" parent="." instance=ExtResource("5_2636j")]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource("CircleShape2D_8wp76")

[node name="Hitbox" parent="." instance=ExtResource("6_3aumw")]
collision_layer = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_bvtts")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="Hitbox"]
